--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-slick": "^0.30.3",
     "react-tooltip": "^5.28.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.15.10",
     "yup": "^1.6.1"
   },
