--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
@@ -21,6 +25,7 @@
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-tooltip": "^5.28.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.15.10",
     "yup": "^1.6.1"
